--- a/html/success.html
+++ b/html/success.html
@@ -34,17 +34,18 @@
         </div>
     </nav>
 
-    <div class="container-fluid row" style="height: 80vh; padding: 2rem;">
-        <div class="col-lg-6 col-md-4" style="margin-top: 2.5%;">
+    <div class="container-fluid row" style="height: 86.7vh; margin: 0rem; padding: 0rem;">
+        <iframe src='https://my.spline.design/roomrelaxingcopy-1d92132cf8367153755ffc6c91bdebd0/' frameborder='0' width='100%' height='100%' style="padding: 0rem;"></iframe>
+        <div class="col-lg-6 col-md-4" style="margin: 2.5%; position: absolute;">
             <h1 class="primaryColor weight800" style="background: transparent; font-size: 3.5rem;">Success biatch!!</h1>
             <h5 class="primaryColor">Welcome to the gang homie!!</h5>
-            
-            <button class="standardButton" style="margin: 0.5rem 0rem 1.5rem;">Back Home</button>
-        </div>
-        <div class="col-lg-6 col-md-8">
-            <iframe src='https://my.spline.design/roomrelaxingcopy-1d92132cf8367153755ffc6c91bdebd0/' frameborder='0' width='100%' height='100%'></iframe>
+            <form action="/success" method="post">
+                <button class="standardButton" style="margin: 0.5rem 0rem 1.5rem;">Back Home</button>
+            </form>
         </div>
     </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
