--- a/html/failure.html
+++ b/html/failure.html
@@ -37,7 +37,7 @@
     <div class="container-fluid row" style="height: 86.7vh; margin: 0rem; padding: 0rem;">
         <iframe src='https://my.spline.design/roomrelaxingcopy-1d92132cf8367153755ffc6c91bdebd0/' frameborder='0' width='100%' height='100%' style="padding: 0rem;"></iframe>
         <div class="col-lg-6 col-md-4" style="margin: 2.5%; position: absolute;">
-            <h1 class="primaryColor weight800" style="background: transparent; font-size: 3.5rem;">welp, someone fucked up.</h1>
+            <h1 class="primaryColor weight800" style="background: transparent; font-size: 3.5rem;">welp, someone messed up.</h1>
             <h5 class="primaryColor">Maybe you, maybe us. Wanna try it again?</h5>
             <form action="/failure" method="post">
                 <button class="standardButton" style="margin: 0.5rem 0rem 1.5rem;">Retry Registration</button>
